test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_11.k
schema Data:
    name: str

data = Data {
    data: 1
}
